https://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.2.B1
Date:
----------------------------------
Changes/New Features:

Bug Fixes:

CAY-2702 Modeler: Callbacks table has too small default width
CAY-2705 Performance of callback annotation processing

----------------------------------
Release: 4.2.M3
Date: March 13, 2021
----------------------------------
Changes/New Features:

CAY-2587 SQLServer Limit Offset translation
CAY-2677 Custom Class Generation Templates for Embeddables and DataMaps
CAY-2689 ServerRuntime API: missing some variants of the performInTransaction() method
CAY-2692 Add entity lifecycle callbacks via annotated methods

Bug Fixes:

CAY-2658 DataChannelMetaData is null during cgen execution
CAY-2661 NPE on DB Import screen
CAY-2678 Inheritance warnings caused by unnecessary MappingCache creations during initialization
CAY-2683 Don't use DISTINCT for joins on to-one related tables
CAY-2685 JsonType should use the actual JDBC type, not OTHER
CAY-2686 SQL translator incorrectly quotes fully qualified tables' names
CAY-2687 Modeler Migrate Repeatedly Asks to Set Column Type for MySQL
CAY-2690 dbimport skips length changes for BINARY and VARBINARY columns
CAY-2691 MySQL driver 8.0.x stores LocalDateTime differently than 5.1.x
CAY-2693 Abstract subentities do not have rows materialized correctly
CAY-2694 Precision issues with reverse / forward engineering of time types on MySQL
CAY-2695 Reverse engineering on SQLite fails due to feature not being supported
CAY-2698 EventSubject.getSubject() is not thread safe

----------------------------------
Release: 4.2.M2
Date: October 6, 2020
----------------------------------
Changes/New Features:

CAY-2338 Support comments in cgen and default templates
CAY-2656 Modeler: option to download required jars directly from maven central