@@ -888,6 +888,9 @@ block|{
 operator|(
 operator|(
 name|DefaultComboBoxModel
+argument_list|<
+name|String
+argument_list|>
 operator|)
 name|view
 operator|.
@@ -904,6 +907,162 @@ name|embeddableName
 argument_list|)
 expr_stmt|;
 block|}
+comment|// need to initialize this early, to react to the later call of the view.getTypeComboBox().setSelectedItem()
+name|view
+operator|.
+name|getTypeComboBox
+argument_list|()
+operator|.
+name|addActionListener
+argument_list|(
+name|e
+lambda|->
+block|{
+name|boolean
+name|isType
+init|=
+literal|false
+decl_stmt|;
+name|String
+index|[]
+name|typeNames
+init|=
+name|ModelerUtil
+operator|.
+name|getRegisteredTypeNames
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|String
+name|typeName
+range|:
+name|typeNames
+control|)
+block|{
+if|if
+condition|(
+name|view
+operator|.
+name|getTypeComboBox
+argument_list|()
+operator|.
+name|getSelectedItem
+argument_list|()
+operator|==
+literal|null
+operator|||
+name|typeName
+operator|.
+name|equals
+argument_list|(
+name|view
+operator|.
+name|getTypeComboBox
+argument_list|()
+operator|.
+name|getSelectedItem
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|isType
+operator|=
+literal|true
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|isType
+operator|||
+operator|!
+name|mediator
+operator|.
+name|getEmbeddableNamesInCurrentDataDomain
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+operator|(
+name|String
+operator|)
+name|view
+operator|.
+name|getTypeComboBox
+argument_list|()
+operator|.
+name|getSelectedItem
+argument_list|()
+argument_list|)
+condition|)
+block|{
+operator|(
+operator|(
+name|CardLayout
+operator|)
+name|view
+operator|.
+name|getTypeManagerPane
+argument_list|()
+operator|.
+name|getLayout
+argument_list|()
+operator|)
+operator|.
+name|show
+argument_list|(
+name|view
+operator|.
+name|getTypeManagerPane
+argument_list|()
+argument_list|,
+name|FLATTENED_PANEL
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+operator|(
+operator|(
+name|CardLayout
+operator|)
+name|view
+operator|.
+name|getTypeManagerPane
+argument_list|()
+operator|.
+name|getLayout
+argument_list|()
+operator|)
+operator|.
+name|show
+argument_list|(
+name|view
+operator|.
+name|getTypeManagerPane
+argument_list|()
+argument_list|,
+name|EMBEDDABLE_PANEL
+argument_list|)
+expr_stmt|;
+name|view
+operator|.
+name|getCurrentPathLabel
+argument_list|()
+operator|.
+name|setText
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
 name|attribute
@@ -958,9 +1117,7 @@ name|relTargets
 operator|=
 operator|new
 name|ArrayList
-argument_list|<
-name|DbEntity
-argument_list|>
+argument_list|<>
 argument_list|(
 name|attribute
 operator|.
@@ -1555,161 +1712,6 @@ name|setEnabledSaveButton
 argument_list|()
 expr_stmt|;
 block|}
-block|}
-block|}
-argument_list|)
-expr_stmt|;
-name|view
-operator|.
-name|getTypeComboBox
-argument_list|()
-operator|.
-name|addActionListener
-argument_list|(
-name|e
-lambda|->
-block|{
-name|boolean
-name|isType
-init|=
-literal|false
-decl_stmt|;
-name|String
-index|[]
-name|typeNames
-init|=
-name|ModelerUtil
-operator|.
-name|getRegisteredTypeNames
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|String
-name|typeName
-range|:
-name|typeNames
-control|)
-block|{
-if|if
-condition|(
-name|view
-operator|.
-name|getTypeComboBox
-argument_list|()
-operator|.
-name|getSelectedItem
-argument_list|()
-operator|==
-literal|null
-operator|||
-name|typeName
-operator|.
-name|equals
-argument_list|(
-name|view
-operator|.
-name|getTypeComboBox
-argument_list|()
-operator|.
-name|getSelectedItem
-argument_list|()
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-condition|)
-block|{
-name|isType
-operator|=
-literal|true
-expr_stmt|;
-block|}
-block|}
-if|if
-condition|(
-name|isType
-operator|||
-operator|!
-name|mediator
-operator|.
-name|getEmbeddableNamesInCurrentDataDomain
-argument_list|()
-operator|.
-name|contains
-argument_list|(
-operator|(
-name|String
-operator|)
-name|view
-operator|.
-name|getTypeComboBox
-argument_list|()
-operator|.
-name|getSelectedItem
-argument_list|()
-argument_list|)
-condition|)
-block|{
-operator|(
-operator|(
-name|CardLayout
-operator|)
-name|view
-operator|.
-name|getTypeManagerPane
-argument_list|()
-operator|.
-name|getLayout
-argument_list|()
-operator|)
-operator|.
-name|show
-argument_list|(
-name|view
-operator|.
-name|getTypeManagerPane
-argument_list|()
-argument_list|,
-name|FLATTENED_PANEL
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-operator|(
-operator|(
-name|CardLayout
-operator|)
-name|view
-operator|.
-name|getTypeManagerPane
-argument_list|()
-operator|.
-name|getLayout
-argument_list|()
-operator|)
-operator|.
-name|show
-argument_list|(
-name|view
-operator|.
-name|getTypeManagerPane
-argument_list|()
-argument_list|,
-name|EMBEDDABLE_PANEL
-argument_list|)
-expr_stmt|;
-name|view
-operator|.
-name|getCurrentPathLabel
-argument_list|()
-operator|.
-name|setText
-argument_list|(
-literal|""
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 argument_list|)
@@ -2351,7 +2353,7 @@ parameter_list|)
 block|{
 if|if
 condition|(
-name|isChange
+name|isModified
 argument_list|()
 condition|)
 block|{
@@ -2461,7 +2463,7 @@ operator|instanceof
 name|EmbeddedAttribute
 operator|)
 operator|||
-name|isRegistredType
+name|isRegisteredType
 argument_list|(
 name|attributeSaved
 operator|.
@@ -2903,7 +2905,7 @@ return|;
 block|}
 specifier|public
 name|boolean
-name|isChange
+name|isModified
 parameter_list|()
 block|{
 name|boolean
@@ -2924,6 +2926,28 @@ operator|)
 operator|.
 name|isAttributeOverrideChange
 argument_list|()
+decl_stmt|;
+name|String
+name|comment
+init|=
+name|ObjectInfo
+operator|.
+name|getFromMetaData
+argument_list|(
+name|mediator
+operator|.
+name|getApplication
+argument_list|()
+operator|.
+name|getMetaData
+argument_list|()
+argument_list|,
+name|attribute
+argument_list|,
+name|ObjectInfo
+operator|.
+name|COMMENT
+argument_list|)
 decl_stmt|;
 return|return
 name|isOverrideTableChange
@@ -3010,27 +3034,12 @@ name|isSelected
 argument_list|()
 operator|||
 operator|!
-name|ObjectInfo
-operator|.
-name|getFromMetaData
-argument_list|(
-name|mediator
-operator|.
-name|getApplication
-argument_list|()
-operator|.
-name|getMetaData
-argument_list|()
-argument_list|,
-name|attribute
-argument_list|,
-name|ObjectInfo
-operator|.
-name|COMMENT
-argument_list|)
+name|Objects
 operator|.
 name|equals
 argument_list|(
+name|comment
+argument_list|,
 name|view
 operator|.
 name|getCommentField
@@ -3046,6 +3055,28 @@ name|void
 name|updateTable
 parameter_list|()
 block|{
+name|String
+name|comment
+init|=
+name|ObjectInfo
+operator|.
+name|getFromMetaData
+argument_list|(
+name|mediator
+operator|.
+name|getApplication
+argument_list|()
+operator|.
+name|getMetaData
+argument_list|()
+argument_list|,
+name|attributeSaved
+argument_list|,
+name|ObjectInfo
+operator|.
+name|COMMENT
+argument_list|)
+decl_stmt|;
 name|model
 operator|.
 name|setUpdatedValueAt
@@ -3106,24 +3137,7 @@ name|model
 operator|.
 name|setUpdatedValueAt
 argument_list|(
-name|ObjectInfo
-operator|.
-name|getFromMetaData
-argument_list|(
-name|mediator
-operator|.
-name|getApplication
-argument_list|()
-operator|.
-name|getMetaData
-argument_list|()
-argument_list|,
-name|attributeSaved
-argument_list|,
-name|ObjectInfo
-operator|.
-name|COMMENT
-argument_list|)
+name|comment
 argument_list|,
 name|row
 argument_list|,
@@ -3642,7 +3656,7 @@ name|String
 argument_list|,
 name|String
 argument_list|>
-name|currentEmbeddableOverrite
+name|currentEmbeddableOverride
 init|=
 operator|new
 name|HashMap
@@ -3747,7 +3761,7 @@ argument_list|)
 operator|)
 condition|)
 block|{
-name|currentEmbeddableOverrite
+name|currentEmbeddableOverride
 operator|.
 name|put
 argument_list|(
@@ -3765,7 +3779,7 @@ expr_stmt|;
 block|}
 block|}
 return|return
-name|currentEmbeddableOverrite
+name|currentEmbeddableOverride
 return|;
 block|}
 specifier|public
@@ -4040,17 +4054,12 @@ block|}
 block|}
 specifier|public
 name|boolean
-name|isRegistredType
+name|isRegisteredType
 parameter_list|(
 name|String
 name|typeName
 parameter_list|)
 block|{
-name|boolean
-name|isType
-init|=
-literal|false
-decl_stmt|;
 name|String
 index|[]
 name|typeNames
@@ -4078,17 +4087,17 @@ name|typeName
 argument_list|)
 condition|)
 block|{
-name|isType
-operator|=
+return|return
 literal|true
-expr_stmt|;
+return|;
 block|}
 block|}
 return|return
-name|isType
+literal|false
 return|;
 block|}
 comment|// custom renderer used for inherited attributes highlighting
+specifier|static
 specifier|final
 class|class
 name|CellRenderer
@@ -4482,8 +4491,15 @@ argument_list|()
 decl_stmt|;
 for|for
 control|(
-name|Object
-name|o
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|obj
 range|:
 name|overrides
 operator|.
@@ -4491,24 +4507,9 @@ name|entrySet
 argument_list|()
 control|)
 block|{
-name|Map
-operator|.
-name|Entry
-name|obj
-init|=
-operator|(
-name|Map
-operator|.
-name|Entry
-operator|)
-name|o
-decl_stmt|;
 name|String
 name|key
 init|=
-operator|(
-name|String
-operator|)
 name|obj
 operator|.
 name|getKey
@@ -4555,8 +4556,15 @@ block|}
 block|}
 for|for
 control|(
-name|Object
-name|o
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|obj
 range|:
 name|currentOverrAttr
 operator|.
@@ -4564,24 +4572,9 @@ name|entrySet
 argument_list|()
 control|)
 block|{
-name|Map
-operator|.
-name|Entry
-name|obj
-init|=
-operator|(
-name|Map
-operator|.
-name|Entry
-operator|)
-name|o
-decl_stmt|;
 name|String
 name|key
 init|=
-operator|(
-name|String
-operator|)
 name|obj
 operator|.
 name|getKey
